# adega

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  compose.yaml  pyproject.toml  report_by_warehouse_and_category.sqlite3-query
address_manager/: admin.py  apps.py  create_db_fixtures.py  forms copy.py  forms.py  forms_n.py  models.py  urls.py  views copy.py  views.py
address_manager/migrations/: 0001_initial.py  0002_alter_address_neighborhood.py
adega/: asgi.py  settings.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
category_manager/: admin.py  apps.py  forms.py  models.py  views.py
category_manager/migrations/: 0001_initial.py  0002_alter_category_upc.py  0003_category_is_fungible.py  0004_alter_category_author_alter_category_color_and_more.py  0005_alter_category_barcode_alter_category_dimension_unit_and_more.py
company_manager/: admin.py  forms.py  models.py  urls.py  validators.py  views.py
company_manager/migrations/: 0001_initial.py  0002_alter_company_address.py  0003_alter_company_cnpj.py  0004_alter_company_cnpj.py
home/: forms.py  urls.py  views.py
item_manager/: admin.py  apps.py  forms.py  models.py  views.py
item_manager/migrations/: 0001_initial.py  0002_alter_item_is_new.py  0003_alter_item_corporate_tag_alter_item_serial_number.py
person_manager/: admin.py  apps.py  forms.py  models.py  urls.py  validators.py  views.py
report_manager/: urls.py  views.py
transaction_manager/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
warehouse_manager/: admin.py  forms.py  models.py  views.py
(+41 files in other folders)
